deploy: 46c8d12028e07f3b2c3b5be438e1af8e9f685f44

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "22170af0",
+   "id": "9ffba83d",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c385cf4",
+   "id": "67c9302b",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ae60b52",
+   "id": "fac69d81",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c626950",
+   "id": "1967492d",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80ec6229",
+   "id": "d35d9d59",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b09198e0",
+   "id": "56261139",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c33e019d",
+   "id": "61186202",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T11:19:01.825898Z",
-     "iopub.status.busy": "2025-02-04T11:19:01.825716Z",
-     "iopub.status.idle": "2025-02-04T11:19:04.862693Z",
-     "shell.execute_reply": "2025-02-04T11:19:04.862080Z"
+     "iopub.execute_input": "2025-02-04T11:23:55.773211Z",
+     "iopub.status.busy": "2025-02-04T11:23:55.773025Z",
+     "iopub.status.idle": "2025-02-04T11:23:59.047072Z",
+     "shell.execute_reply": "2025-02-04T11:23:59.046456Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5dbd5f42",
+   "id": "16cdef41",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "231941ab",
+   "id": "902262e8",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "502ed8a9",
+   "id": "38e43988",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b08cd0b",
+   "id": "c4ca9efa",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "531dc162",
+   "id": "b88fd6bb",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c0f5f27",
+   "id": "7ddc6b34",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9bd6283",
+   "id": "b5d45b94",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a234b6dd",
+   "id": "c804bf54",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "075e6e47",
+   "id": "c6868504",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T11:19:04.864980Z",
-     "iopub.status.busy": "2025-02-04T11:19:04.864541Z",
-     "iopub.status.idle": "2025-02-04T11:19:06.821108Z",
-     "shell.execute_reply": "2025-02-04T11:19:06.820594Z"
+     "iopub.execute_input": "2025-02-04T11:23:59.049467Z",
+     "iopub.status.busy": "2025-02-04T11:23:59.049035Z",
+     "iopub.status.idle": "2025-02-04T11:24:01.139087Z",
+     "shell.execute_reply": "2025-02-04T11:24:01.138440Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73082437",
+   "id": "959f94f7",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0f432041",
+   "id": "5d02e742",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T11:19:06.823074Z",
-     "iopub.status.busy": "2025-02-04T11:19:06.822694Z",
-     "iopub.status.idle": "2025-02-04T11:19:06.826325Z",
-     "shell.execute_reply": "2025-02-04T11:19:06.825709Z"
+     "iopub.execute_input": "2025-02-04T11:24:01.141185Z",
+     "iopub.status.busy": "2025-02-04T11:24:01.140749Z",
+     "iopub.status.idle": "2025-02-04T11:24:01.144338Z",
+     "shell.execute_reply": "2025-02-04T11:24:01.143690Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de7c5646",
+   "id": "944c638a",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b532493",
+   "id": "83dd6881",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c30c0cc1",
+   "id": "86b94ddc",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddfc7d71",
+   "id": "b484cccb",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "619a40cf",
+   "id": "c91791c7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T11:19:06.828229Z",
-     "iopub.status.busy": "2025-02-04T11:19:06.827821Z",
-     "iopub.status.idle": "2025-02-04T11:19:06.871911Z",
-     "shell.execute_reply": "2025-02-04T11:19:06.871333Z"
+     "iopub.execute_input": "2025-02-04T11:24:01.146344Z",
+     "iopub.status.busy": "2025-02-04T11:24:01.145965Z",
+     "iopub.status.idle": "2025-02-04T11:24:01.191815Z",
+     "shell.execute_reply": "2025-02-04T11:24:01.191315Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c60edd3c",
+   "id": "0d3493ef",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f73ba47d",
+   "id": "6de8b3ce",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T11:19:06.873836Z",
-     "iopub.status.busy": "2025-02-04T11:19:06.873499Z",
-     "iopub.status.idle": "2025-02-04T11:19:06.939541Z",
-     "shell.execute_reply": "2025-02-04T11:19:06.938961Z"
+     "iopub.execute_input": "2025-02-04T11:24:01.193622Z",
+     "iopub.status.busy": "2025-02-04T11:24:01.193436Z",
+     "iopub.status.idle": "2025-02-04T11:24:01.265216Z",
+     "shell.execute_reply": "2025-02-04T11:24:01.264692Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7446e56f",
+   "id": "b5b387ff",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07aac507",
+   "id": "b815667e",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cbb06726",
+   "id": "1aef05a8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T11:19:06.941668Z",
-     "iopub.status.busy": "2025-02-04T11:19:06.941198Z",
-     "iopub.status.idle": "2025-02-04T11:19:06.968445Z",
-     "shell.execute_reply": "2025-02-04T11:19:06.967952Z"
+     "iopub.execute_input": "2025-02-04T11:24:01.267239Z",
+     "iopub.status.busy": "2025-02-04T11:24:01.266851Z",
+     "iopub.status.idle": "2025-02-04T11:24:01.296005Z",
+     "shell.execute_reply": "2025-02-04T11:24:01.295488Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8aceed4",
+   "id": "97994e91",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfaef871",
+   "id": "582bb521",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77d0fa68",
+   "id": "ed3e5bf0",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3e17ae4",
+   "id": "f5110c5a",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ca54053",
+   "id": "2b434592",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "42da1aa2",
+   "id": "cd245c31",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T11:19:06.970527Z",
-     "iopub.status.busy": "2025-02-04T11:19:06.970133Z",
-     "iopub.status.idle": "2025-02-04T11:19:06.974208Z",
-     "shell.execute_reply": "2025-02-04T11:19:06.973668Z"
+     "iopub.execute_input": "2025-02-04T11:24:01.298124Z",
+     "iopub.status.busy": "2025-02-04T11:24:01.297733Z",
+     "iopub.status.idle": "2025-02-04T11:24:01.301860Z",
+     "shell.execute_reply": "2025-02-04T11:24:01.301343Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fd7a502",
+   "id": "398f94fe",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1c34b7d0",
+   "id": "8d47581e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T11:19:06.975862Z",
-     "iopub.status.busy": "2025-02-04T11:19:06.975701Z",
-     "iopub.status.idle": "2025-02-04T11:19:06.978518Z",
-     "shell.execute_reply": "2025-02-04T11:19:06.978031Z"
+     "iopub.execute_input": "2025-02-04T11:24:01.303611Z",
+     "iopub.status.busy": "2025-02-04T11:24:01.303336Z",
+     "iopub.status.idle": "2025-02-04T11:24:01.306352Z",
+     "shell.execute_reply": "2025-02-04T11:24:01.305768Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "941f3b81",
+   "id": "6934d533",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d6473057",
+   "id": "59e6c57d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T11:19:06.980080Z",
-     "iopub.status.busy": "2025-02-04T11:19:06.979905Z",
-     "iopub.status.idle": "2025-02-04T11:19:09.486830Z",
-     "shell.execute_reply": "2025-02-04T11:19:09.486241Z"
+     "iopub.execute_input": "2025-02-04T11:24:01.308139Z",
+     "iopub.status.busy": "2025-02-04T11:24:01.307810Z",
+     "iopub.status.idle": "2025-02-04T11:24:03.950391Z",
+     "shell.execute_reply": "2025-02-04T11:24:03.949783Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bab14c44",
+   "id": "95b67f09",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09408229",
+   "id": "5638cddd",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9432f886",
+   "id": "adc2cdb7",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d1c50ab",
+   "id": "cf2ea2ee",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7264dff5",
+   "id": "7c5334c0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T11:19:09.489018Z",
-     "iopub.status.busy": "2025-02-04T11:19:09.488597Z",
-     "iopub.status.idle": "2025-02-04T11:19:09.492119Z",
-     "shell.execute_reply": "2025-02-04T11:19:09.491548Z"
+     "iopub.execute_input": "2025-02-04T11:24:03.952476Z",
+     "iopub.status.busy": "2025-02-04T11:24:03.952108Z",
+     "iopub.status.idle": "2025-02-04T11:24:03.955320Z",
+     "shell.execute_reply": "2025-02-04T11:24:03.954847Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fcf56dcbe20>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f6bcd2dfe20>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f25c869",
+   "id": "5ce66df2",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a90662f7",
+   "id": "f6d50aa7",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef178255",
+   "id": "3d5d533c",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4064039",
+   "id": "9c18e7cf",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b6ba8249",
+   "id": "572dfa41",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T11:19:09.494119Z",
-     "iopub.status.busy": "2025-02-04T11:19:09.493772Z",
-     "iopub.status.idle": "2025-02-04T11:19:09.496773Z",
-     "shell.execute_reply": "2025-02-04T11:19:09.496303Z"
+     "iopub.execute_input": "2025-02-04T11:24:03.957398Z",
+     "iopub.status.busy": "2025-02-04T11:24:03.957011Z",
+     "iopub.status.idle": "2025-02-04T11:24:03.960349Z",
+     "shell.execute_reply": "2025-02-04T11:24:03.959661Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "665723d4",
+   "id": "0263e29d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T11:19:09.498437Z",
-     "iopub.status.busy": "2025-02-04T11:19:09.498096Z",
-     "iopub.status.idle": "2025-02-04T11:19:10.544963Z",
-     "shell.execute_reply": "2025-02-04T11:19:10.544405Z"
+     "iopub.execute_input": "2025-02-04T11:24:03.962258Z",
+     "iopub.status.busy": "2025-02-04T11:24:03.961841Z",
+     "iopub.status.idle": "2025-02-04T11:24:05.034183Z",
+     "shell.execute_reply": "2025-02-04T11:24:05.033640Z"
     }
    },
    "outputs": [
