--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9ffba83d",
+   "id": "a4ec24f7",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67c9302b",
+   "id": "d862aea2",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fac69d81",
+   "id": "7f0620c6",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1967492d",
+   "id": "f1744c30",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d35d9d59",
+   "id": "5aa4db98",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56261139",
+   "id": "310856a2",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "61186202",
+   "id": "f455d931",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T11:23:55.773211Z",
-     "iopub.status.busy": "2025-02-04T11:23:55.773025Z",
-     "iopub.status.idle": "2025-02-04T11:23:59.047072Z",
-     "shell.execute_reply": "2025-02-04T11:23:59.046456Z"
+     "iopub.execute_input": "2025-02-04T12:26:54.565584Z",
+     "iopub.status.busy": "2025-02-04T12:26:54.565410Z",
+     "iopub.status.idle": "2025-02-04T12:26:58.036351Z",
+     "shell.execute_reply": "2025-02-04T12:26:58.035706Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16cdef41",
+   "id": "129ea3f9",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "902262e8",
+   "id": "66a45047",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38e43988",
+   "id": "d36f3db4",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4ca9efa",
+   "id": "99b90057",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b88fd6bb",
+   "id": "1c2e87f6",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ddc6b34",
+   "id": "b7eb9731",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5d45b94",
+   "id": "53755008",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c804bf54",
+   "id": "b1f57f15",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c6868504",
+   "id": "71d9515a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T11:23:59.049467Z",
-     "iopub.status.busy": "2025-02-04T11:23:59.049035Z",
-     "iopub.status.idle": "2025-02-04T11:24:01.139087Z",
-     "shell.execute_reply": "2025-02-04T11:24:01.138440Z"
+     "iopub.execute_input": "2025-02-04T12:26:58.038974Z",
+     "iopub.status.busy": "2025-02-04T12:26:58.038436Z",
+     "iopub.status.idle": "2025-02-04T12:27:00.267595Z",
+     "shell.execute_reply": "2025-02-04T12:27:00.267033Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "959f94f7",
+   "id": "6657b7ba",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5d02e742",
+   "id": "fb84d5fd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T11:24:01.141185Z",
-     "iopub.status.busy": "2025-02-04T11:24:01.140749Z",
-     "iopub.status.idle": "2025-02-04T11:24:01.144338Z",
-     "shell.execute_reply": "2025-02-04T11:24:01.143690Z"
+     "iopub.execute_input": "2025-02-04T12:27:00.269479Z",
+     "iopub.status.busy": "2025-02-04T12:27:00.269277Z",
+     "iopub.status.idle": "2025-02-04T12:27:00.272759Z",
+     "shell.execute_reply": "2025-02-04T12:27:00.272109Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "944c638a",
+   "id": "e78441b2",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83dd6881",
+   "id": "79fc1ca4",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86b94ddc",
+   "id": "05a2839e",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b484cccb",
+   "id": "1297104a",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c91791c7",
+   "id": "aba055cc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T11:24:01.146344Z",
-     "iopub.status.busy": "2025-02-04T11:24:01.145965Z",
-     "iopub.status.idle": "2025-02-04T11:24:01.191815Z",
-     "shell.execute_reply": "2025-02-04T11:24:01.191315Z"
+     "iopub.execute_input": "2025-02-04T12:27:00.274875Z",
+     "iopub.status.busy": "2025-02-04T12:27:00.274506Z",
+     "iopub.status.idle": "2025-02-04T12:27:00.320936Z",
+     "shell.execute_reply": "2025-02-04T12:27:00.320410Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d3493ef",
+   "id": "0e894ed8",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6de8b3ce",
+   "id": "60e0ff94",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T11:24:01.193622Z",
-     "iopub.status.busy": "2025-02-04T11:24:01.193436Z",
-     "iopub.status.idle": "2025-02-04T11:24:01.265216Z",
-     "shell.execute_reply": "2025-02-04T11:24:01.264692Z"
+     "iopub.execute_input": "2025-02-04T12:27:00.322810Z",
+     "iopub.status.busy": "2025-02-04T12:27:00.322617Z",
+     "iopub.status.idle": "2025-02-04T12:27:00.396541Z",
+     "shell.execute_reply": "2025-02-04T12:27:00.395908Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5b387ff",
+   "id": "b6ed9a1e",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b815667e",
+   "id": "c598f31e",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1aef05a8",
+   "id": "3350b9a3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T11:24:01.267239Z",
-     "iopub.status.busy": "2025-02-04T11:24:01.266851Z",
-     "iopub.status.idle": "2025-02-04T11:24:01.296005Z",
-     "shell.execute_reply": "2025-02-04T11:24:01.295488Z"
+     "iopub.execute_input": "2025-02-04T12:27:00.398444Z",
+     "iopub.status.busy": "2025-02-04T12:27:00.398269Z",
+     "iopub.status.idle": "2025-02-04T12:27:00.428872Z",
+     "shell.execute_reply": "2025-02-04T12:27:00.428317Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97994e91",
+   "id": "9b84889a",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "582bb521",
+   "id": "dd707ed8",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed3e5bf0",
+   "id": "4bc431e6",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5110c5a",
+   "id": "b64698c9",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b434592",
+   "id": "ccf87f2c",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cd245c31",
+   "id": "5cfeb471",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T11:24:01.298124Z",
-     "iopub.status.busy": "2025-02-04T11:24:01.297733Z",
-     "iopub.status.idle": "2025-02-04T11:24:01.301860Z",
-     "shell.execute_reply": "2025-02-04T11:24:01.301343Z"
+     "iopub.execute_input": "2025-02-04T12:27:00.430932Z",
+     "iopub.status.busy": "2025-02-04T12:27:00.430709Z",
+     "iopub.status.idle": "2025-02-04T12:27:00.435049Z",
+     "shell.execute_reply": "2025-02-04T12:27:00.434554Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "398f94fe",
+   "id": "8243e50d",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8d47581e",
+   "id": "2060b5dd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T11:24:01.303611Z",
-     "iopub.status.busy": "2025-02-04T11:24:01.303336Z",
-     "iopub.status.idle": "2025-02-04T11:24:01.306352Z",
-     "shell.execute_reply": "2025-02-04T11:24:01.305768Z"
+     "iopub.execute_input": "2025-02-04T12:27:00.436989Z",
+     "iopub.status.busy": "2025-02-04T12:27:00.436622Z",
+     "iopub.status.idle": "2025-02-04T12:27:00.439635Z",
+     "shell.execute_reply": "2025-02-04T12:27:00.439132Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6934d533",
+   "id": "22eece2d",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "59e6c57d",
+   "id": "17915cd9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T11:24:01.308139Z",
-     "iopub.status.busy": "2025-02-04T11:24:01.307810Z",
-     "iopub.status.idle": "2025-02-04T11:24:03.950391Z",
-     "shell.execute_reply": "2025-02-04T11:24:03.949783Z"
+     "iopub.execute_input": "2025-02-04T12:27:00.441729Z",
+     "iopub.status.busy": "2025-02-04T12:27:00.441280Z",
+     "iopub.status.idle": "2025-02-04T12:27:03.165431Z",
+     "shell.execute_reply": "2025-02-04T12:27:03.164820Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95b67f09",
+   "id": "26531333",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5638cddd",
+   "id": "d2196938",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adc2cdb7",
+   "id": "2c3d9265",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf2ea2ee",
+   "id": "742043bc",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7c5334c0",
+   "id": "8b5d07f0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T11:24:03.952476Z",
-     "iopub.status.busy": "2025-02-04T11:24:03.952108Z",
-     "iopub.status.idle": "2025-02-04T11:24:03.955320Z",
-     "shell.execute_reply": "2025-02-04T11:24:03.954847Z"
+     "iopub.execute_input": "2025-02-04T12:27:03.167623Z",
+     "iopub.status.busy": "2025-02-04T12:27:03.167155Z",
+     "iopub.status.idle": "2025-02-04T12:27:03.170999Z",
+     "shell.execute_reply": "2025-02-04T12:27:03.170303Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f6bcd2dfe20>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fb2738dbe20>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ce66df2",
+   "id": "acce8a4b",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6d50aa7",
+   "id": "fc460292",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d5d533c",
+   "id": "4e3f0fc2",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c18e7cf",
+   "id": "aeef29b5",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "572dfa41",
+   "id": "3cd5c81e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T11:24:03.957398Z",
-     "iopub.status.busy": "2025-02-04T11:24:03.957011Z",
-     "iopub.status.idle": "2025-02-04T11:24:03.960349Z",
-     "shell.execute_reply": "2025-02-04T11:24:03.959661Z"
+     "iopub.execute_input": "2025-02-04T12:27:03.172924Z",
+     "iopub.status.busy": "2025-02-04T12:27:03.172566Z",
+     "iopub.status.idle": "2025-02-04T12:27:03.175687Z",
+     "shell.execute_reply": "2025-02-04T12:27:03.175195Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0263e29d",
+   "id": "66b1d707",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-04T11:24:03.962258Z",
-     "iopub.status.busy": "2025-02-04T11:24:03.961841Z",
-     "iopub.status.idle": "2025-02-04T11:24:05.034183Z",
-     "shell.execute_reply": "2025-02-04T11:24:05.033640Z"
+     "iopub.execute_input": "2025-02-04T12:27:03.177477Z",
+     "iopub.status.busy": "2025-02-04T12:27:03.177106Z",
+     "iopub.status.idle": "2025-02-04T12:27:04.258763Z",
+     "shell.execute_reply": "2025-02-04T12:27:04.258192Z"
     }
    },
    "outputs": [
